--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -47,7 +47,7 @@
                                 <i class="glyphicon glyphicon-tags icon-white"></i>
                                 <a href="#/reserver">
                                     <b>
-                                        <span class="badge">{{nbrereserver}</span>
+                                        <span class="badge">{{nbrereserver}}</span>
                                         Reservés
                                     </b>
                                 </a>
